Update Skills and Education layouts

--- a/src/_includes/skills.njk
+++ b/src/_includes/skills.njk
@@ -88,26 +88,26 @@
             <div class="accordion-body">
                 <article>
                     <h4>Full-Stack Web Developer</h4>
-                    <h5>Freelance / Self-Employed</h5>
+                    <h5>Freelance</h5>
                     <p>Designing, building and maintaining full-stack web applications for a range of clients. Building websites from scratch. Updating existing e-commerce and booking sites hosted on Wix and WordPress. Adding new features; improving user experience and accessibility; estimating tasks; exploratory and regression testing; bug reports.</p>
                 </article>
                 
                 <article>
                     <h4>Web Developer</h4>
-                    <h5>A Yorkshire-Based Paint and Coatings Company (remote)</h5>
+                    <h5>An International Company (remote)</h5>
                     <p>Maintained multiple WordPress WooCommerce sites for the company and its sister companies, including writing custom code. Designed and built custom page templates using HTML5 and CSS for the company’s eBay product listings to reflect themes used on their websites. Conducted exploratory and regression testing. Worked closely with company directors and marketing team. Delivered web accessibility training to colleagues and established formal documentation. Implemented agile methodologies.</p>
                 </article>
 
                 <article>
                     <h4>Software Automation Tester</h4>
-                    <h5>Sky UK Ltd, Leeds Dock (hybrid)</h5>
-                    <p>Began as a graduate trainee automation tester (6 months). Projects included a booking and weather web application, followed by an internal iOS data reporting app for the My Sky App tribe, both designed and built from scratch. Automation testing tech stack included Java, Cucumber, Selenium, Postman and Appium.</p>
-                    <p>I then worked in the Sky Identity tribe on backend Java projects, end-to-end and regression testing APIs. Tech stack included Gauge Java BDD framework, Postman, Docker, Jenkins, CircleCI, Octopus and Kubernetes. I provided code reviews, regularly pair programmed and created Confluence documentation explaining backend architecture for new starters. In addition, I supported Sky’s <a href="https://getintotech.sky.com/courses/get-into-tech/">Get into Tech</a> women’s coding initiative and facilitated a monthly support group for Leeds colleagues living with chronic pain and long-term conditions.</p>
+                    <h5>Sky UK Ltd, Leeds (hybrid)</h5>
+                    <p>Began as a graduate trainee automation tester (6 months). Projects included a booking and weather web application, followed by an iOS data reporting app. Both projects designed and built by my squad from scratch. Automation testing tech stack included Java, Cucumber, Selenium, Postman and Appium.</p>
+                    <p>I then worked on internal backend Java projects, end-to-end and regression testing APIs. Tech stack included Gauge Java BDD framework, Postman, Docker, Jenkins, CircleCI, Octopus and Kubernetes. I provided code reviews, regularly pair programmed and created Confluence documentation explaining backend architecture for new starters. In addition, I supported Sky’s <a href="https://getintotech.sky.com/courses/get-into-tech/">Get into Tech</a> women’s coding initiative and facilitated a monthly support group for Leeds colleagues living with chronic pain and long-term conditions.</p>
                 </article>
 
                 <article>
                     <h4>Online Information Coordinator</h4>
-                    <h5>A Yorkshire-Based Paint and Coatings Company (remote)</h5>
+                    <h5>An International Company (remote)</h5>
                     <p>Responsible for maintaining multiple social media sites and WordPress blog for the main company and its sister companies. Worked closely with company directors, sales and marketing teams.</p>
                 </article>
             </div>
@@ -119,36 +119,53 @@
             Education</button>
         </h3>
         <div id="collapseThree" class="accordion-collapse collapse row" data-bs-parent="#skills">
-            <div class="accordion-body">
-                <article>
-                    <h4>The Coders Guild</h4>
-                    <p>Skills Bootcamp in Web Design & Development</p>
-                </article>
+            <div class="accordion-body row">
+                <section class="col-md-6 mb-2">
 
-                <article>
-                    <h4>University of Leeds</h4>
-                    <p>Postgraduate Certificate in Education (PGCE) with Qualified Teacher Status (QTS)</p>
-                </article>
+                    <h4 class="pb-3">Training</h4>
 
-                <article>
-                    <h4>The Open University</h4>
-                    <p>Master of Arts (MA)</p>
-                </article>
+                    <article>
+                        <h5>The Coders Guild</h5>
+                        <p class="mb-1">Skills Bootcamp in Web Design & Development</p>
+                        <p>Feb 2024</p>
+                    </article>
+                    
+                    <article>
+                        <h5>Sky UK Ltd, Leeds Dock</h5>
+                        <p class="mb-1">Get into Tech: Software Development Bootcamp</p>
+                        <p>May 2018</p>
+                    </article>
+                    
+                    <article>
+                        <h5>University of Hertfordshire</h5>
+                        <p class="mb-1">Procedural & Object-Oriented Programming</p>
+                        <p>Jan 2018</p>
+                    </article>
+                    
+                </section>
 
-                <article>
-                    <h4>Sky UK Ltd, Leeds Dock</h4>
-                    <p>Sky ‘Get Into Tech’ Full Stack Software Development Bootcamp</p>
-                </article>
+                <section class="col-md-6 mb-2">
+                    <h4 class="pb-3">Higher Education</h4>
+                    
+                    <article>
+                        <h5>University of Leeds</h5>
+                        <p class="mb-1">PGCE & Qualified Teacher Status (QTS)</p>
+                        <p>July 2023</p>
+                    </article>
 
-                <article>
-                    <h4>University of Hertfordshire</h4>
-                    <p>Procedural & Object-Oriented Programming (module)</p>
-                </article>
+                    <article>
+                        <h5>The Open University</h5>
+                        <p class="mb-1">Master of Arts (MA) in Philosophy</p>
+                        <p>Sept 2022</p>
+                    </article>
+                    
+                    <article>
+                        <h5>The Open University</h5>
+                        <p class="mb-1">Bachelor Of Arts (Hons) 2:1</p>
+                        <p>July 2017</p>
+                    </article>
 
-                <article>
-                    <h4>The Open University</h4>
-                    <p>Bachelor Of Arts (Hons) 2:1</p>
-                </article>
+                </section>
             </div>
         </div>
     </div>
