--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,42 +1,49 @@
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid mx-2 mx-xl-4">
-        <a class="navbar-brand" href="/">
-            <img src="/images/brand-logo-img.WEBP" alt="Jen Patchett Logo Image" class="d-inline-block brand-logo-img">
-            Jen Patchett
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-            <div class="offcanvas-header">
-            <a class="navbar-brand" href="/"><h5 class="offcanvas-title" id="offcanvasNavbarLabel">Jen Patchett</h5></a>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            <a class="navbar-brand" href="/">
+                <img src="/images/brand-logo-img.WEBP" alt="Jen Patchett Logo Image" class="d-inline-block brand-logo-img">
+                Jen Patchett
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close">
+                    </button>
+                </div>
+
+                <div class="offcanvas-body">
+                    <ul id="nav-list" class="navbar-nav ">
+                        <li class="nav-item mx-auto">
+                            <a class="nav-link active" aria-current="page" href="/#top">Home</a>
+                        </li>
+                        <li class="nav-item mx-auto">
+                            <a class="nav-link" href="/#about">About</a>
+                        </li>
+                        <li class="nav-item mx-auto">
+                            <a class="nav-link" href="/#skills">Skills</a>
+                        </li>
+                        <li class="nav-item mx-auto">
+                            <a class="nav-link" href="/#projects">Projects</a>
+                        </li>
+                        <li class="nav-item mx-auto">
+                            <a class="nav-link" href="/contact">Contact</a>
+                        </li>
+                    </ul>
+                    {# <form class="d-flex mt-3" role="search">
+                        <input id="search-input" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button id="search-btn" class="btn" type="submit"><img src="/images/search.svg" alt="search button"> </button>
+                    </form> #}
+
+                    <div class="nav-social-links">
+                        <a href="https://github.com/JenPatchett" target="_blank"><img src="/images/github.svg" class="social-logo" alt="GitHub logo"></a>
+                        <a href="https://www.linkedin.com/in/jenpatchett/" target="_blank"><img src="/images/linkedin.svg" class="social-logo" alt="LinkedIn logo"></a>
+                    </div>
+                </div>
             </div>
-            <div class="offcanvas-body">
-            <ul id="nav-list" class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/#top">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/#about">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/#skills">Skills</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/#projects">Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contact</a>
-                </li>
-            </ul>
-            {# <form class="d-flex mt-3" role="search">
-                <input id="search-input" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button id="search-btn" class="btn" type="submit"><img src="/images/search.svg" alt="search button"> </button> #}
-            </form>
-            </div>
-        </div>
         </div>
     </nav>
 </header>
