Reorder Skills list

--- a/src/_includes/skills.njk
+++ b/src/_includes/skills.njk
@@ -33,14 +33,14 @@
                         <li>CSS</li>
                         <li>Bootstrap</li>
                         <li>11ty SSG</li>
+                        <li>Netlify</li>
                         <li>Accessibility</li>
-                        <li>Git</li>
+                        <li>Git / version control</li>
                         <li>Agile</li>
                         <li>Jira</li>
                         <li>Bash / Zsh</li>
-                        <li>Netlify</li>
-                        <li>WordPress</li>
                         <li>Wix</li>
+                        <li>WordPress</li>
                         <li>OOP</li>
                         <li>Java</li>
                         <li>PhP</li>
