--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,6 +1,6 @@
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
-        <div class="container-fluid mx-2 mx-xl-4">
+        <div class="container-fluid nav-container">
             <a class="navbar-brand" href="/">
                 <img src="/images/brand-logo-img.WEBP" alt="Jen Patchett Logo Image" class="d-inline-block brand-logo-img">
                 Jen Patchett
