CSS to make skills h4 headings bolder

--- a/src/_includes/skills.njk
+++ b/src/_includes/skills.njk
@@ -8,7 +8,7 @@
         <div id="collapseOne" class="accordion-collapse collapse show row" data-bs-parent="#skills">
             <div class="accordion-body row">
                 <article class="col-md-4 ">
-                    <h4>Soft Skills</h4>
+                    <h4 class="skills-h4">Soft Skills</h4>
                     <ul class="split-col split-col-md">
                         <li>Problem solving</li>
                         <li>Communication</li>
@@ -25,7 +25,7 @@
                 </article>
 
                 <article class="col-md-5">
-                    <h4>Software Development</h4>
+                    <h4 class="skills-h4">Software Development</h4>
                     <ul class="split-col">
                         <li>JavaScript</li>
                         <li>HTML5</li>
@@ -57,8 +57,8 @@
                 </article>
 
                 <article class="col-md-3">
-                    <h4 id="hide-md">Software Testing</h4>
-                    <h4 id="hide-not-md">Testing</h4>
+                    <h4 id="hide-md" class="skills-h4">Software Testing</h4>
+                    <h4 id="hide-not-md" class="skills-h4">Testing</h4>
                     <ul class="split-col split-col-md">
                         <li>Exploratory</li>
                         <li>Automation</li>
@@ -85,26 +85,26 @@
         <div id="collapseTwo" class="accordion-collapse collapse row" data-bs-parent="#skills">
             <div class="accordion-body">
                 <article>
-                    <h4>Full-Stack Web Developer</h4>
+                    <h4 class="skills-h4">Full-Stack Web Developer</h4>
                     <h5>Freelance</h5>
                     <p>Designing, building and maintaining full-stack web applications for a range of clients. Building websites from scratch. Updating existing e-commerce and booking sites hosted on Wix and WordPress. Adding new features; improving user experience and accessibility; estimating tasks; exploratory and regression testing; bug reports.</p>
                 </article>
                 
                 <article>
-                    <h4>Web Developer</h4>
+                    <h4 class="skills-h4">Web Developer</h4>
                     <h5>An International Company (remote)</h5>
                     <p>Maintained multiple WordPress WooCommerce sites for the company and its sister companies, including writing custom code. Designed and built custom page templates using HTML5 and CSS for the company’s eBay product listings to reflect themes used on their websites. Conducted exploratory and regression testing. Worked closely with company directors and marketing team. Delivered web accessibility training to colleagues and established formal documentation. Implemented agile methodologies.</p>
                 </article>
 
                 <article>
-                    <h4>Software Automation Tester</h4>
+                    <h4 class="skills-h4">Software Automation Tester</h4>
                     <h5>Sky UK Ltd, Leeds (hybrid)</h5>
                     <p>Began as a graduate trainee automation tester (6 months). Projects included a booking and weather web application, followed by an iOS data reporting app. Both projects designed and built by my squad from scratch. Automation testing tech stack included Java, Cucumber, Selenium, Postman and Appium.</p>
                     <p>I then worked on internal backend Java projects, end-to-end and regression testing APIs. Tech stack included Gauge Java BDD framework, Postman, Docker, Jenkins, CircleCI, Octopus and Kubernetes. I provided code reviews, regularly pair programmed and created Confluence documentation explaining backend architecture for new starters. In addition, I supported Sky’s <a href="https://getintotech.sky.com/courses/get-into-tech/">Get into Tech</a> women’s coding initiative and facilitated a monthly support group for Leeds colleagues living with chronic pain and long-term conditions.</p>
                 </article>
 
                 <article>
-                    <h4>Online Information Coordinator</h4>
+                    <h4 class="skills-h4">Online Information Coordinator</h4>
                     <h5>An International Company (remote)</h5>
                     <p>Responsible for maintaining multiple social media sites and WordPress blog for the main company and its sister companies. Worked closely with company directors, sales and marketing teams.</p>
                 </article>
@@ -120,7 +120,7 @@
             <div class="accordion-body row">
                 <section class="col-md-6 mb-2">
 
-                    <h4 class="pb-3">Training</h4>
+                    <h4 class="skills-h4 pb-3">Training</h4>
 
                     <article>
                         <h5>The Coders Guild</h5>
@@ -143,7 +143,7 @@
                 </section>
 
                 <section class="col-md-6 mb-2">
-                    <h4 class="pb-3">Higher Education</h4>
+                    <h4 class="skills-h4 pb-3">Higher Education</h4>
                     
                     <article>
                         <h5>University of Leeds</h5>
