Add a small margin-top to accordion body in Skills & Experience

--- a/src/_includes/skills.njk
+++ b/src/_includes/skills.njk
@@ -6,7 +6,7 @@
             Skills</button>
         </h3>
         <div id="collapseOne" class="accordion-collapse collapse show row" data-bs-parent="#skills">
-            <div class="accordion-body row">
+            <div class="accordion-body row mt-2">
                 <article class="col-md-4 ">
                     <h4>Soft Skills</h4>
                     <ul class="split-col split-col-md">
@@ -83,7 +83,7 @@
             Relevant Experience</button>
         </h3>
         <div id="collapseTwo" class="accordion-collapse collapse row" data-bs-parent="#skills">
-            <div class="accordion-body experience">
+            <div class="accordion-body experience mt-2">
                 <article>
                     <h4>Full-Stack Web Developer</h4>
                     <h5>Freelance</h5>
@@ -117,7 +117,7 @@
             Education</button>
         </h3>
         <div id="collapseThree" class="accordion-collapse collapse row" data-bs-parent="#skills">
-            <div class="accordion-body row education">
+            <div class="accordion-body education row mt-2">
                 <section class="col-md-6 mb-2">
 
                     <h4 class="pb-3">Training</h4>
