--- a/src/_includes/skills.njk
+++ b/src/_includes/skills.njk
@@ -25,7 +25,7 @@
                 </article>
 
                 <article class="col-md-5">
-                    <h4>Software Development</h4>
+                    <h4 class="skills-h4">Software Development</h4>
                     <ul class="split-col">
                         <li>JavaScript</li>
                         <li>HTML5</li>
@@ -57,8 +57,8 @@
                 </article>
 
                 <article class="col-md-3">
-                    <h4 id="hide-md">Software Testing</h4>
-                    <h4 id="hide-not-md">Testing</h4>
+                    <h4 id="hide-md" class="skills-h4">Software Testing</h4>
+                    <h4 id="hide-not-md" class="skills-h4">Testing</h4>
                     <ul class="split-col split-col-md">
                         <li>Exploratory</li>
                         <li>Automation</li>
