Remove scroll-margin-top class and add as CSS for every Section selector

--- a/src/_includes/about.njk
+++ b/src/_includes/about.njk
@@ -1,4 +1,4 @@
-<section id="about" class="row scroll-margin-top">
+<section id="about" class="row">
 
     {# <!-- About --> #}
     <div class="col-12 col-lg-6">
