--- a/src/_includes/project-grid.njk
+++ b/src/_includes/project-grid.njk
@@ -1,6 +1,6 @@
 {# Partial to display multiple project-card items #}
 
-<section id="projects" class="projects scroll-margin-top">
+<section id="projects" class="projects">
     <h2 class="heading-mb">Recent Projects</h2>
 
     <div class="project-grid row">
