--- a/src/_includes/project.njk
+++ b/src/_includes/project.njk
@@ -4,7 +4,7 @@ layout: "base.njk"
 
 {# Template to show a project on its own page #}
 
-<section class="project">
+<section class="project scroll-margin-top">
   <h2 class="heading-mb">{{ title }}</h2>
   <div class="project__image-wrapper">
     {# update to use below instead of img ref after npm install @11ty/eleventy-img #}
