--- a/src/_includes/skills.njk
+++ b/src/_includes/skills.njk
@@ -1,4 +1,4 @@
-<section id="skills" class="accordion skills-accordion scroll-margin-top">
+<section id="skills" class="accordion skills-accordion">
     <h2 class="heading-mb">My Skills & Experience</h2>
     <div class="accordion-item">
         <h3 class="accordion-header">
