--- a/src/_includes/project.njk
+++ b/src/_includes/project.njk
@@ -4,14 +4,21 @@ layout: "base.njk"
 
 {# Template to show a project on its own page #}
 
-<section class="project scroll-margin-top">
-  <h2 class="heading-mb">{{ title }}</h2>
+<section class="project">
+  <h2 class="project-title heading-mb">{{ title }}</h2>
   <div class="project__image-wrapper">
     {# update to use below instead of img ref after npm install @11ty/eleventy-img #}
     {# {% EleventyImage image, imageAlt, "(min-width: 30em) 50vw, 100vw" %} #}
     
     <a href="#" target="_blank"><img src="/images/macbook-code.jpg" class="card-img-top" alt="A half-visible MacBook with computer code on the screen and an iPhone on the desk in the background"></a>
   </div>
+
+  <div class="project-card__tags">
+    {% for tag in project.data.tech %}
+      <span class="project-card__tag">{{ tag }}</span>
+    {% endfor %}
+  </div>
+
   <div class="project__content prose">
     {{ content | safe }}
   </div>
