--- a/src/styles.css
+++ b/src/styles.css
@@ -164,6 +164,10 @@ main a:hover {
 	padding-top: 50px;
 }
 
+.project-title {
+	margin-top: 85px;
+}
+
 .card-title {
 	font-size: 20px;
 	margin-top: 20px;
