Fix typo in Education

--- a/src/_includes/skills.njk
+++ b/src/_includes/skills.njk
@@ -159,7 +159,7 @@
                     
                     <article>
                         <h5>The Open University</h5>
-                        <p class="mb-1">Bachelor Of Arts (Hons) 2:1</p>
+                        <p class="mb-1">Bachelor of Arts (Hons) 2:1</p>
                         <p>July 2017</p>
                     </article>
 
