--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -18,7 +18,7 @@
         {% include "header.njk" %}
 		
 
-		<main class="main-content px-sm-5 mt-md-4">
+		<main class="main-content mt-md-4">
 
 			{# Import content from templates and partials #}
 			{{ content | safe }}
