--- a/src/contact.njk
+++ b/src/contact.njk
@@ -3,7 +3,7 @@ title: "Jen Patchett"
 layout: "base.njk"
 ---
 
-<section id="contact" class="row">
+<section id="contact" class="mx-auto">
     <h2>Contact</h2>
     <form id="contact-form" name="contact" method="POST" action="#" netlify>
         <fieldset class="mb-3 contact-form">
