--- a/src/index.njk
+++ b/src/index.njk
@@ -4,10 +4,10 @@ layout: "base.njk"
 ---
 
 {# <!-- Title and Description --> #}
-<section id="heading">
+{# <section id="heading">
     <h1 id="main-title" class="mt-sm-2">Jen Patchett</h1>
     <h2 id="main-description">Web Developer & Software Automation Tester</h2>
-</section>
+</section> #}
 
 {# Import About and Skills partials #}
 {% include "about.njk" %}
