Edit carousel headings and add CSS to center them

--- a/src/_includes/about.njk
+++ b/src/_includes/about.njk
@@ -14,7 +14,7 @@
                 alt="">
             <div class="carousel-caption">
                 <h1>Jen Patchett</h1>
-                <h2>Web developer & former software automation tester</h2>
+                <h2>Web Developer</h2>
                 {# <a class="btn btn-primary mx-auto carousel-callback-btn" href="/#contact" role="button">Request
                     a Callback</a> #}
             </div>
@@ -24,7 +24,7 @@
                 alt="">
             <div class="carousel-caption">
                 <h1>Jen Patchett</h1>
-                <h2>Web developer & former software automation tester</h2>
+                <h2>Web Developer</h2>
                 {# <a class="btn btn-primary mx-auto carousel-callback-btn" href="/#contact" role="button">Request
                     a Callback</a> #}
             </div>
@@ -34,7 +34,7 @@
                 alt="">
             <div class="carousel-caption">
                 <h1>Jen Patchett</h1>
-                <h2>Web developer & former software automation tester</h2>
+                <h2>Web Developer</h2>
                 {# <a class="btn btn-primary mx-auto carousel-callback-btn" href="/#contact" role="button">Request
                     a Callback</a> #}
             </div>
