--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -11,6 +11,9 @@
 		
 		{# <!-- Additional Stylesheet --> #}
 		<link rel="stylesheet" href="{{'/styles.css' | url | safe}}">
+
+		<!-- BS Icons -->
+    	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 	</head>
 
 	<body>
