--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,5 +1,5 @@
 <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container-fluid nav-container">
             <a class="navbar-brand" href="/">
                 <img src="/images/brand-logo-img.WEBP" alt="Jen Patchett Logo Image" class="d-inline-block brand-logo-img">
@@ -11,7 +11,7 @@
 
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close">
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close">
                     </button>
                 </div>
 
@@ -39,8 +39,8 @@
                     </form> #}
 
                     <div class="nav-social-links">
-                        <a href="https://github.com/JenPatchett" target="_blank"><img src="/images/github.svg" class="social-logo" alt="GitHub logo"></a>
-                        <a href="https://www.linkedin.com/in/jenpatchett/" target="_blank"><img src="/images/linkedin.svg" class="social-logo" alt="LinkedIn logo"></a>
+                        <a href="https://github.com/JenPatchett" target="_blank"><i class="bi bi-facebook social-logo" style="color: #fff; font-size: 1.6rem;"></i></a>
+                        <a href="https://www.linkedin.com/in/jenpatchett/" target="_blank"><i class="bi bi-instagram social-logo" style="color: #fff; font-size: 1.6rem;"></i></a>
                     </div>
                 </div>
             </div>
