--- a/src/styles.css
+++ b/src/styles.css
@@ -8,30 +8,38 @@ body {
 
 /* NAVIGATION */
 
+nav {
+	background-color: #2d3339;
+}
+
+nav a {
+	color: #ffffff;
+}
+
 .nav-container {
-	/* max-width: 1400px; */
-	font-size: 1.2rem;
+	padding: 0 30px;
 }
 
 .nav-social-links {
 	text-align: center;
+	margin-top: 20px;
 }
 
 .offcanvas {
 	max-width: 312px;
+	background-color: #2d3339;
 }
 
 .navbar-brand {
-	font-size: 1.1rem;
+	color: #ffffff;
 }
 
 .brand-logo-img {
 	object-fit: cover;
 	width: 50px;
 	height: 50px;
-	border: 1px solid #7843E9;
 	border-radius: 50%;
-	background-color: #7843E9;
+	background-color: #F8F9FA;
 	margin-right: 10px;
 }
 
