--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body {
 /* NAVIGATION */
 
 nav {
-	background-color: #2d3339;
+	background-color: #171a1c;
 }
 
 nav a {
@@ -27,7 +27,7 @@ nav a {
 
 .offcanvas {
 	max-width: 312px;
-	background-color: #2d3339;
+	background-color: #171a1c;
 }
 
 .navbar-brand {
@@ -52,11 +52,9 @@ nav a {
 /* MAIN CONTENT */
 
 .main-content {
-	/* max-width: 1400px; */
 	width: 100%;
 	font-size: 16px;
 	margin: auto;
-	/* padding: 0 20px; */
 	/* scroll-behavior: smooth; */
 }
 
