Update footer colours and BS icons

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -39,8 +39,8 @@
                     </form> #}
 
                     <div class="nav-social-links">
-                        <a href="https://github.com/JenPatchett" target="_blank"><i class="bi bi-facebook social-logo" style="color: #fff; font-size: 1.6rem;"></i></a>
-                        <a href="https://www.linkedin.com/in/jenpatchett/" target="_blank"><i class="bi bi-instagram social-logo" style="color: #fff; font-size: 1.6rem;"></i></a>
+                        <a href="https://github.com/JenPatchett" target="_blank"><i class="bi bi-github social-logo" style="color: #fff; font-size: 1.6rem;"></i></a>
+                        <a href="https://www.linkedin.com/in/jenpatchett/" target="_blank"><i class="bi bi-linkedin social-logo" style="color: #fff; font-size: 1.6rem;"></i></a>
                     </div>
                 </div>
             </div>
