--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,5 +1,5 @@
 <footer>
-    <a href="https://github.com/JenPatchett" target="_blank"><img src="/images/github.svg" class="social-logo" alt="GitHub logo"></a>
-    <a href="https://www.linkedin.com/in/jenpatchett/" target="_blank"><img src="/images/linkedin.svg" class="social-logo" alt="LinkedIn logo"></a>
+    <a href="https://github.com/JenPatchett" target="_blank"><i class="bi bi-github social-logo" alt="GitHub logo"></i></a>
+    <a href="https://www.linkedin.com/in/jenpatchett/" target="_blank"><i class="bi bi-linkedin social-logo"></i></a>
     <p>Copyright &copy {% year %} Jen Patchett. All rights reserved.</p>
 </footer>
