--- a/src/styles.css
+++ b/src/styles.css
@@ -264,7 +264,7 @@ main a:hover {
 }
 
 .project__image-wrapper img {
-	max-width: 100%;
+	max-width: 300px;
 	height: auto;
 	display: block;
 	margin: 0 auto 30px;
@@ -357,6 +357,10 @@ footer p {
 
 	.skills-h4 {
 		padding-top: 0;
+	}
+
+	.project__image-wrapper img {
+		max-width: 600px;
 	}
 
 	#contact {
