Fix responsive Project img css & remove target=blank on Proj cards

--- a/src/_includes/project-card.njk
+++ b/src/_includes/project-card.njk
@@ -3,7 +3,7 @@
 <article class="col-12 col-sm-6 col-xl-3 mb-5"> 
   <div class="card project-card h-100" style="width: auto;">
     <div class="project-card__image-wrapper">
-      <a href="{{ project.url }}" target="_blank">{% EleventyImage project.data.image, project.data.imageAlt, "(min-width: 30em) 50vw, 100vw" %}</a>
+      <a href="{{ project.url }}">{% EleventyImage project.data.image, project.data.imageAlt, "(min-width: 30em) 50vw, 100vw" %}</a>
     </div>
       
     <div class="card-body">
